dartagnan/src/test/resources/spirv/opencl/gpuverify/benign_race_tests/pass/writeinloop.spvasm
; @Config: 3, 1, 3
; SPIR-V
; Version: 1.0
; Generator: Khronos LLVM/SPIR-V Translator; 14
; Bound: 33
; Schema: 0
               OpCapability Addresses
               OpCapability Kernel
          %1 = OpExtInstImport "OpenCL.std"
               OpMemoryModel Physical32 OpenCL
               OpEntryPoint Kernel %6 "foo"
               OpSource OpenCL_C 200000
               OpName %A "A"
               OpName %start "start"
               OpName %end "end"
               OpName %entry "entry"
               OpName %for_cond "for.cond"
               OpName %for_body "for.body"
               OpName %for_inc "for.inc"
               OpName %for_end "for.end"
               OpName %A_addr "A.addr"
               OpName %start_addr "start.addr"
               OpName %end_addr "end.addr"
               OpName %i "i"
               OpName %cmp "cmp"
               OpName %arrayidx "arrayidx"
               OpName %inc "inc"
               OpDecorate %A_addr Alignment 4
               OpDecorate %start_addr Alignment 4
               OpDecorate %end_addr Alignment 4
               OpDecorate %i Alignment 4
       %uint = OpTypeInt 32 0
     %uint_0 = OpConstant %uint 0
    %uint_42 = OpConstant %uint 42
     %uint_1 = OpConstant %uint 1
       %void = OpTypeVoid
%_ptr_Workgroup_uint = OpTypePointer Workgroup %uint
          %5 = OpTypeFunction %void %_ptr_Workgroup_uint %uint %uint
%_ptr_Function__ptr_Workgroup_uint = OpTypePointer Function %_ptr_Workgroup_uint
%_ptr_Function_uint = OpTypePointer Function %uint
       %bool = OpTypeBool
          %6 = OpFunction %void DontInline %5
          %A = OpFunctionParameter %_ptr_Workgroup_uint
      %start = OpFunctionParameter %uint
        %end = OpFunctionParameter %uint
      %entry = OpLabel
     %A_addr = OpVariable %_ptr_Function__ptr_Workgroup_uint Function
 %start_addr = OpVariable %_ptr_Function_uint Function
   %end_addr = OpVariable %_ptr_Function_uint Function
          %i = OpVariable %_ptr_Function_uint Function
               OpStore %A_addr %A Aligned 4
               OpStore %start_addr %start Aligned 4
               OpStore %end_addr %end Aligned 4
         %21 = OpLoad %uint %start_addr Aligned 4
               OpStore %i %21 Aligned 4
               OpBranch %for_cond
   %for_cond = OpLabel
         %22 = OpLoad %uint %i Aligned 4
         %23 = OpLoad %uint %end_addr Aligned 4
        %cmp = OpULessThan %bool %22 %23
               OpBranchConditional %cmp %for_body %for_end
   %for_body = OpLabel
         %26 = OpLoad %_ptr_Workgroup_uint %A_addr Aligned 4
   %arrayidx = OpInBoundsPtrAccessChain %_ptr_Workgroup_uint %26 %uint_0
               OpStore %arrayidx %uint_42 Aligned 4
               OpBranch %for_inc
    %for_inc = OpLabel
         %30 = OpLoad %uint %i Aligned 4
        %inc = OpIAdd %uint %30 %uint_1
               OpStore %i %inc Aligned 4
               OpBranch %for_cond
    %for_end = OpLabel
               OpReturn
               OpFunctionEnd
